Fix drawer rail edge alignment

--- a/studio/client/styles/drawers.css
+++ b/studio/client/styles/drawers.css
@@ -8,7 +8,7 @@
   position: fixed;
   top: 4.6rem;
   bottom: 1rem;
-  right: 0;
+  right: calc(100% - 100vw);
   z-index: 70;
   display: flex;
   flex-direction: row;
